--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.5.0",
     "pinia": "^3.0.3",
     "sass": "^1.90.0",
+    "sweetalert2": "^11.22.3",
     "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
