adding Children form and some library

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "sweetalert2": "^11.22.3",
     "vue": "^3.5.18",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-easy-data-table": "^1.5.47"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
